--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
         <div class="container left">
           <div class="content">
             <div class="article-detail">
-              <h2>2023 Feb</h2>
-              <img src="./assets/malaysia.png" alt="flag icon" class="flag-icon" />
+              <h2>2023 Feb to Now</h2>
+              <img src="./assets/indonesia.png" alt="flag icon" class="flag-icon" />
             </div>
             <article>
               <img src="./assets/suitcase.png" alt="education icon" class="education-icon" />
